# fragalysis-backend

./: .dockerignore  .gitignore  .hadolint.yaml  .mypy.ini  .pre-commit-config.yaml  .pylintrc  .readthedocs.yml  .travis.yml  Dockerfile  Jenkinsfile  LICENSE  README.md  build-and-push.sh  build-requirements.txt  django_nginx.conf  docker-compose-migrate.yml  docker-compose.celery.yml  docker-compose.dev-back.yml  docker-compose.dev-env.yml  docker-compose.dev.yml  docker-compose.edit.yml  docker-compose.test.yml  docker-compose.yml  docker-entrypoint.sh  docker-swarm.yml  dump.rdb  endpoints.md  install  launch-beat.sh  launch-stack.sh  launch-worker.sh  loader.py  makemigrations.sh  manage.py  nginx.conf  no.travis.yml  package.json  proxy_params  pyproject.toml  requirements.txt  (+5 more)
.github/workflows/: build-dev.yaml  build-main.yaml  build-production.yaml  build-staging.yaml  codeql.yml
api/: infections.py  ispyb_connection.py  prometheus_metrics.py  remote_ispyb_connector.py  security.py  storage.py  urls.py  utils.py  views.py
asap_migrate/: .gitignore  README.md  docker-compose.yaml
assets/js/: compound_components.js  generic_components.js  index.js  ngl-controller.js  ngl-script.js  ngl-ui.js  ngl_components.js
car/: api.py  createmodels.py  forms.py  models.py  serializers.py  tasks.py  urls.py  utils.py  validate.py  views.py
car/IBM/: createmodels.py
car/humanread/: HumanRead.py
car/lcms/: cartolcms.py
car/manifold/: apicalls.py
car/mcule/: apicalls.py  outputplatecsv.py
car/migrations/: 0001_initial.py  0002_auto_20221115_1738.py  0003_auto_20221121_1806.py  0004_auto_20221125_0856.py  0005_auto_20230201_1915.py  0006_auto_20230206_1105.py
car/opentrons/: cartoot.py  labwareavailable.py  otsession.py  otwrite.py
car/recipebuilder/: encodedrecipes.py
car/tests/: testcreateproject.py  testutils.py
clustering/: models.py
composeexample/: settings.py
design_docs/: JobSumitterMainFlow.puml  compound_set_upload.md  computed_set_upload.md  download_structures.md  squonk2-access-control.puml
doc_templates/: README.md  download_readme_template.md
docs/: conda.environment.yml
docs/source/: conf.py  index.rst  vectors.rst
fragalysis/: apps.py  auth.py  celery.py  schema.py  settings.py  urls.py  views.py  wsgi.py
fragalysis/utils/: __init__.py
fragspect/: serializers.py  urls.py  views.py
frontend/: package-lock.json  package.json
grafana/: dashboard.json
hotspots/: models.py  schema.py  serializers.py  views.py
hotspots/migrations/: 0001_initial.py  0002_alter_hotspotmap_id.py  0002_auto_20200804_1242.py  0003_auto_20230816_1208.py
hypothesis/: definitions.py  filters.py  models.py  schema.py  serializers.py  views.py
hypothesis/migrations/: 0001_initial.py  0002_auto_20200804_1242.py  0002_auto_20230818_1532.py  0003_auto_20200804_1411.py  0004_auto_20230816_1208.py
loader/: config.py  functions.py  loaders.py  utils.py
media_serve/: urls.py  views.py
network/: functions.py  urls.py  views.py
pandda/: models.py  schema.py  serializers.py  views.py
scoring/: managers.py  models.py  schema.py  serializers.py  urls.py  views.py
scoring/migrations/: 0001_initial.py  0002_auto_20200804_1242.py  0002_auto_20230818_1532.py  0003_auto_20200804_1411.py  0003_auto_20231020_1501.py  0004_alter_siteobservationgroup_site_observation.py  0004_auto_20230816_1208.py  0005_auto_20230816_1208.py  0006_alter_siteobservationgroup_site_observation.py  0007_alter_siteobservationgroup_site_observation.py  0008_alter_siteobservationgroup_site_observation.py
service_status/: apps.py  managers.py  models.py  services.py  utils.py
service_status/migrations/: 0001_initial.py  0002_auto_20240517_1356.py  0003_rename_services_service.py  0004_auto_20240517_1510.py  0005_remove_service_last_state.py  0006_service_last_state.py  0007_alter_service_last_states_of_same_type.py  0008_service_total_queries.py
tests/: nodb_settings.py  nodb_test_runner.py  test_api.py  test_loader.py  test_network.py  test_network_functions.py  test_scoring.py  test_uploads.py  test_viewer.py  test_viewer_utils.py
viewer/: compound_set_upload.py  compound_sets.py  cset_upload.py  definitions.py  discourse.py  download_structures.py  filters.py  forms.py  functions.py  loaders.py  managers.py  models.py  permissions.py  schema.py  sdf_check.py  serializers.py  services.py  squonk.py  squonk2_agent.py  squonk_job_file_transfer.py  squonk_job_file_upload.py  squonk_job_request.py  tags.py  target_loader.py  target_set_config.py  target_set_upload.py  tasks.py  urls.py  utils.py  views.py
xcdb/: schema.py  urls.py  views.py
(+219 files in other folders)
