[tool.poetry]
name = "fragalysis-backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "fragalysis_backend"}]

[tool.poetry.dependencies]
python = "^3.10.12"
rdkit = "2023.3.2"
Django = "^3.2"
celery = "^5.3"
deepdiff = "^5.8"
django-bootstrap3 = "^14.1"
django-cleanup = "^5.0.0"
django-extensions = "3"
django-filter = "^2.3"
django-guardian = "^2.3"
djangorestframework = "^3.11"
django-rest-swagger = "^2.2.0"
django-simple-history = "^3.3.0"
django-webpack-loader = "^0.7.0"
fragalysis = "^1.0.0"
graphene-django = "^2.12.1"
gunicorn = "^20.0.4"
im-squonk2-client = "^1.22.0"
ispyb = "^4.10.0"
mozilla_django_oidc = "^1.2.4"
mysql-connector = "^2.1.7"
mysql-connector-python = "^8.0.21"
pandas = "^1.1.0"
pandoc = "^2.0.1"
psutil = "^5.9.5"
psycopg2-binary = "^2.9.6"
pydiscourse = "^1.3.0"
pymysql = "^0.10.1"
sentry-sdk = "^0.16.3"
shortuuid = "^1.0.11"
sshtunnel = "^0.1.5"
urllib3 = "^1.25.10"
validators = "^0.17.1"
xchem-db = "^0.1.26b0"
redis = "^4.6.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"
pylint = "^2.17.4"
pylint-django = "^2.5.3"
httpie = "^3.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
