[tool.poetry]
name = "fragalysis-backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "fragalysis_backend"}]

[tool.poetry.dependencies]
python = "^3.11.3"
celery = "^5.3.1"
deepdiff = "^6.2.0"
django = "^3.2"
django-bootstrap3 = "^14.1"
django-cleanup = "^5.0.0"
django-extensions = "3"
django-filter = "^2.3"
django-guardian = "^2.3"
djangorestframework = "^3.11"
django-rest-swagger = "^2.2.0"
django-simple-history = "^3.3.0"
django-webpack-loader = "^0.7.0"
fragalysis = "^1.0.0"
graphene-django = "^3.1.3"
gunicorn = "^21.2.0"
im-squonk2-client = "^1.22.2"
ispyb = "4.13.2"
mozilla_django_oidc = "^3.0.0"
mysql-connector = "^2.1.7"
mysql-connector-python = "^8.1.0"
pandas = "^1.0.3"
pandoc = "^2.3"
psutil = "^5.9.5"
psycopg2-binary = "^2.9.6"
pydiscourse = "^1.3.0"
pymysql = "^1.1.0"
rdkit = "2023.3.2"
redis = "^4.6.0"
sentry-sdk = "^1.29.2"
shortuuid = "^1.0.11"
sshtunnel = "^0.4.0"
urllib3 = "^2.0.4"
validators = "^0.20.0"
xchem-db = "^0.1.26b0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"
pylint = "^2.17.4"
pylint-django = "^2.5.3"
httpie = "^3.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
